--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
             <li mid="tab1" funurl="userInfo.html"><a tabindex="-1" href="javascript:void(0);">个人信息</a></li>
             <li mid="tab2" funurl="myCourse.html"><a tabindex="-1" href="javascript:void(0);">我的课程</a></li>
             <li mid="tab3" funurl="courseList.html"><a tabindex="-1" href="javascript:void(0);">我要选课</a></li>
+            <li mid="tab4" funurl="collegeList.html"><a tabindex="-1" href="javascript:void(0);">学院列表</a></li>
           </ul>
         </div>
       </div>
