--- a/src/main/resources/templates/collegeList.html
+++ b/src/main/resources/templates/collegeList.html
@@ -32,12 +32,12 @@
                 </td>
                 <td>
                     <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:${(college.name)!}')">${college.name!}</a>
+                        <a href="javascript:;" onclick="alert('courseName:${(college.name)!}')">${(college.name)!}</a>
                     </div>
                 </td>
                 <td>
                     <div class="courseQualification">
-                        <span>${college.dean_id!}</span>
+                        <span>${(college.dean_id)!}</span>
                     </div>
                 </td>
 
