--- a/src/main/resources/templates/courseList.html
+++ b/src/main/resources/templates/courseList.html
@@ -98,6 +98,7 @@
 
             </tbody>
         </table>
+        <!--<a href="/courseList?offset=15&limit=15">下一页</a>-->
     </div>
 
 <#include "footer.html" />
