--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,8 @@
 
 <div class="content">
 <div class="container">
-<h3 class="page-header">余强</h3>
-<a class="quit" onclick="loginOut()" href="javascript:">退出</a>
+<h3 class="page-header">${(student.name)!"未登录访客"}</h3>
+<a class="quit" href="/logout">退出</a>
 
   <div class="">
     <div class="row-fluid">
