--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登录</title>
+    <title>登陆AND注册</title>
     <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
     <link rel="stylesheet" href="Style/login.css" type="text/css" />
 
@@ -16,21 +16,29 @@
 <body>
 <div class="container">
     <div class="row">
-        <form class="form-horizontal">
-            <span >用户登录</span>
+        <form class="form-horizontal" id="regloginform" method="post">
+            <span>
+                <#if msg??>
+                    ${msg}
+                <#else>
+                    用户登录
+                </#if>
+            </span>
 
             <div class="input-form">
-                <input type="text" class="form-control" id="inputAccount" placeholder="账号">
+                <input type="text" name="name" class="form-control" id="inputAccount" placeholder="账号">
             </div>
             <br>
 
             <div class="input-form">
-                <input type="password" class="form-control" id="inputPassword" placeholder="密码">
+                <input type="password" name="password" class="form-control" id="inputPassword" placeholder="密码">
             </div>
             <br>
 
             <div class="submit">
-                <button type="submit" class="btn btn-default" onclick="loginSuccess(); return false;">登 录</button>
+                <!--<button type="submit" class="btn btn-default" onclick="loginSuccess(); return false;">登 录</button>-->
+                <button type="submit" class="btn btn-default" onclick="form=document.getElementById('regloginform');form.action='/login' ">登录</button>
+                <button type="submit" class="btn btn-default"  onclick="form=document.getElementById('regloginform');form.action='/reg' ">注册</button>
             </div>
         </form>
     </div>
