--- a/src/main/resources/templates/myCourse.html
+++ b/src/main/resources/templates/myCourse.html
@@ -5,6 +5,7 @@
         </div>
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tbody>
+            <#if student??>
             <tr style="height: 25px" align="center">
                 <th scope="col">
                     班号
@@ -29,10 +30,13 @@
                 </th>
             </tr>
 
+            <#if publishCourses??>
+
+            <#list publishCourses as course>
             <tr align="center">
                 <td>
                     <div class="courseID">
-                        <a href="javascript:;" onclick="open_box()">88888</a>
+                        <a href="javascript:;" onclick="open_box()">${course.id}</a>
                     </div>
                 </td>
                 <td>
@@ -71,309 +75,12 @@
                     </div>
                 </td>
             </tr>
+            </#list>
+            <#if/>
 
-            <tr align="center">
-                <td>
-                    <div class="courseID">
-                        <a href="javascript:;" onclick="alert('courseID:88888')">88888</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:算法设计与分析')">算法设计与分析</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseCredit">
-                        <span>2</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseTeacher">
-                        <a href="javascript:;" onclick="alert('courseTeacher:张杰')">张杰&nbsp;</a>
-                        |
-                        <a href="javascript:;" onclick="alert('courseTeacher:李新')">李新</a>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="courseClassroom">
-                        <span>E201&nbsp;</span>
-                        |
-                        <span>E408</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseDuration">
-                        <span>1-16周</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="deleteCourse">
-                        <a href="javascript:;" onclick="alert('无法删除！hhh')">删除</a>
-                    </div>
-                </td>
-            </tr>
-
-            <tr align="center">
-                <td>
-                    <div class="courseID">
-                        <a href="javascript:;" onclick="alert('courseID:88888')">88888</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:算法设计与分析')">算法设计与分析</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseCredit">
-                        <span>2</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseTeacher">
-                        <a href="javascript:;" onclick="alert('courseTeacher:张杰')">张杰&nbsp;</a>
-                        |
-                        <a href="javascript:;" onclick="alert('courseTeacher:李新')">李新</a>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="courseClassroom">
-                        <span>E201&nbsp;</span>
-                        |
-                        <span>E408</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseDuration">
-                        <span>1-16周</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="deleteCourse">
-                        <a href="javascript:;" onclick="alert('无法删除！hhh')">删除</a>
-                    </div>
-                </td>
-            </tr>
-
-            <tr align="center">
-                <td>
-                    <div class="courseID">
-                        <a href="javascript:;" onclick="alert('courseID:88888')">88888</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:算法设计与分析')">算法设计与分析</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseCredit">
-                        <span>2</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseTeacher">
-                        <a href="javascript:;" onclick="alert('courseTeacher:张杰')">张杰&nbsp;</a>
-                        |
-                        <a href="javascript:;" onclick="alert('courseTeacher:李新')">李新</a>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="courseClassroom">
-                        <span>E201&nbsp;</span>
-                        |
-                        <span>E408</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseDuration">
-                        <span>1-16周</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="deleteCourse">
-                        <a href="javascript:;" onclick="alert('无法删除！hhh')">删除</a>
-                    </div>
-                </td>
-            </tr>
-
-            <tr align="center">
-                <td>
-                    <div class="courseID">
-                        <a href="javascript:;" onclick="alert('courseID:88888')">88888</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:算法设计与分析')">算法设计与分析</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseCredit">
-                        <span>2</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseTeacher">
-                        <a href="javascript:;" onclick="alert('courseTeacher:张杰')">张杰&nbsp;</a>
-                        |
-                        <a href="javascript:;" onclick="alert('courseTeacher:李新')">李新</a>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="courseClassroom">
-                        <span>E201&nbsp;</span>
-                        |
-                        <span>E408</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseDuration">
-                        <span>1-16周</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="deleteCourse">
-                        <a href="javascript:;" onclick="alert('无法删除！hhh')">删除</a>
-                    </div>
-                </td>
-            </tr>
-
-            <tr align="center">
-                <td>
-                    <div class="courseID">
-                        <a href="javascript:;" onclick="alert('courseID:88888')">88888</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:算法设计与分析')">算法设计与分析</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseCredit">
-                        <span>2</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseTeacher">
-                        <a href="javascript:;" onclick="alert('courseTeacher:张杰')">张杰&nbsp;</a>
-                        |
-                        <a href="javascript:;" onclick="alert('courseTeacher:李新')">李新</a>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="courseClassroom">
-                        <span>E201&nbsp;</span>
-                        |
-                        <span>E408</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseDuration">
-                        <span>1-16周</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="deleteCourse">
-                        <a href="javascript:;" onclick="alert('无法删除！hhh')">删除</a>
-                    </div>
-                </td>
-            </tr>
-
-            <tr align="center">
-                <td>
-                    <div class="courseID">
-                        <a href="javascript:;" onclick="alert('courseID:88888')">88888</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:算法设计与分析')">算法设计与分析</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseCredit">
-                        <span>2</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseTeacher">
-                        <a href="javascript:;" onclick="alert('courseTeacher:张杰')">张杰&nbsp;</a>
-                        |
-                        <a href="javascript:;" onclick="alert('courseTeacher:李新')">李新</a>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="courseClassroom">
-                        <span>E201&nbsp;</span>
-                        |
-                        <span>E408</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseDuration">
-                        <span>1-16周</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="deleteCourse">
-                        <a href="javascript:;" onclick="alert('无法删除！hhh')">删除</a>
-                    </div>
-                </td>
-            </tr>
-
-            <tr align="center">
-                <td>
-                    <div class="courseID">
-                        <a href="javascript:;" onclick="alert('courseID:88888')">88888</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseName">
-                        <a href="javascript:;" onclick="alert('courseName:算法设计与分析')">算法设计与分析</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseCredit">
-                        <span>2</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseTeacher">
-                        <a href="javascript:;" onclick="alert('courseTeacher:张杰')">张杰&nbsp;</a>
-                        |
-                        <a href="javascript:;" onclick="alert('courseTeacher:李新')">李新</a>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="courseClassroom">
-                        <span>E201&nbsp;</span>
-                        |
-                        <span>E408</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="courseDuration">
-                        <span>1-16周</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="deleteCourse">
-                        <a href="javascript:;" onclick="alert('无法删除！hhh')">删除</a>
-                    </div>
-                </td>
-            </tr>
-
-
+            <#else>
+                <tr><th><h3>请登录查看</h3></th></tr>
+            </#if>
             </tbody>
         </table>
     </div>
