--- a/src/main/resources/templates/userInfo.html
+++ b/src/main/resources/templates/userInfo.html
@@ -1,18 +1,27 @@
 <#include "header.html" parse=true/>
 
 <div class="cztable">
+
     <table width="100%" cellpadding="0" cellspacing="0">
+    <#if student??>
         <tr>
             <td align="right" width="80">姓名：</td>
-            <td id="name">余强&nbsp;</td>
+            <td id="name">${(student.name)!}&nbsp;</td>
             <td align="right" width="90">学号：</td>
-            <td id="studentNum">2013101062&nbsp;</td>
+            <td id="studentNum">${(student.id)!}&nbsp;</td>
 
             <!--<td rowspan="9"><div align="center"><img id="pic_face"  height="160" width="120" src="Images/user.png"/ style="padding:0px 0px;"></div>&nbsp;</td>-->
         </tr>
         <tr>
             <td align="right">性别：</td>
-            <td id="sex">男&nbsp;</td>
+            <td id="sex">
+                <#if !student.sex>
+                    男
+                <#else>
+                    女
+                </#if>
+
+                &nbsp;</td>
             <td align="right">专业：</td>
             <td id="major">计算机科学与技术&nbsp;</td>
         </tr>
@@ -20,7 +29,7 @@
             <td align="right">出生日期：</td>
             <td id="birthDate">20170101&nbsp;</td>
             <td align="right">入学年度：</td>
-            <td id="enrolYear">2013&nbsp;</td>
+            <td id="enrolYear">${(student.year)!}&nbsp;</td>
         </tr>
         <tr>
             <td align="right">籍贯：</td>
@@ -58,7 +67,12 @@
             <td align="right">联系地址：</td>
             <td id="address" colspan="4">广东省汕头市金平区汕头大学</td>
         </tr>
+    <#else>
+        <tr>
+            <td><h3>请登录查看</h3></td>
+        </tr>
 
+    </#if>
     </table>
 </div>
 <#include "footer.html" />
